update setting & detail status

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,21 +2,22 @@ name: test_flutter
 version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
-environment:
-  sdk: ">=2.18.2 <3.0.0"
+environment: 
+  sdk: '>=2.12.0 <3.0.0'
 
-dependencies:
+dependencies: 
   cupertino_icons: ^1.0.2
-  page_transition: "^2.0.9"
   get: 4.6.5
-  flutter:
+  faker: 2.0.0
+  flutter: 
     sdk: flutter
 
-dev_dependencies:
+dev_dependencies: 
   flutter_lints: ^2.0.0
   lints: 2.0.1
-  flutter_test:
+  flutter_test: 
     sdk: flutter
 
-flutter:
+flutter: 
   uses-material-design: true
+
